# labs2024

./: FAQ.md  README.md
lab1/: README.md
lab2/: README.md
lab2/soluzioni/: count_multiples.cpp  taylor.cpp  taylor_opt.cpp
lab3/: README.md
lab3/soluzioni/: regression.test.cpp
lab4/: README.md
lab4/soluzioni/: regression.test.cpp
lab5/: README.md
lab5/soluzioni/: CMakeLists.txt  main.cpp  regression.cpp  regression.hpp  regression.test.cpp
lab6/: README.md
lab6/samples/: data.txt
lab6/soluzioni/: CMakeLists.txt  main.cpp  regression.cpp  regression.hpp  regression.test.cpp
